data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1257.wast
;; 8. **Loop with Conditional Exit to Imported Function**:    - Test a loop with a conditional exit (`br_if`) that branches out to an imported function. Ensure the correct control flow is maintained and the loop exits properly without corrupting the stack.    - **Constraint**: Verifies the correct conditional execution and proper handling of stack when transitioning to imported functions.

(assert_invalid
  (module
    (func $imported (import "env" "importedFunc") (param i32))
    (func $test 
      (i32.const 0)
      (loop
        (br_if 0 (i32.const 1))
        (call $imported (i32.const 42))
        (br 1)
      )
    )
  )
  "type mismatch"
)